--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource/dejavu-mono/400.css';
+import '@fontsource/dejavu-mono/700.css';
 interface Props {
 	title: string;
 }
@@ -15,47 +17,41 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script src="https://kit.fontawesome.com/7c9cbab142.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
 	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
+		font-family: 'DejaVu Mono', sans-serif;
+		background: #1b2022;
 		background-size: 224px;
 		font-size: 16px;
+
+		& p,
+		ul,
+		h1,
+		h2,
+		span,
+		i {
+			color: #fff8ef;
+		}
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
+
+	ul {
+		list-style: none;
+		padding-left: 0;
 	}
 
 	h1 {
-		font-size: 1.4em;
+		font-size: 1.4rem;
+		font-weight: 700;
 	}
 
 	h2 {
-		font-size: 1.3em;
+		font-size: 1.3rem;
 	}
 
 	p {
