--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import ProfileHeader from '../components/ProfileHeader.astro';
 import WorkExperience from '../components/WorkExperience.astro';
 import About from '../components/About.astro';
+import Education from '../components/Education.astro';
+import Skills from '../components/Skills.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -10,6 +12,8 @@ import About from '../components/About.astro';
 		<ProfileHeader />
 		<About />
 		<WorkExperience />
+		<Skills />
+		<Education />
 	</main>
 </Layout>
 
@@ -18,6 +22,7 @@ import About from '../components/About.astro';
 		margin: auto;
 		padding-block: 1.6rem;
 		width: 80ch;
+		max-width: calc(100% - 24px);
 		color: white;
 		display: flex;
 		flex-direction: column;
