--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import WorkExperience from '../components/WorkExperience.astro';
 import About from '../components/About.astro';
 import Education from '../components/Education.astro';
 import Skills from '../components/Skills.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,6 +15,7 @@ import Skills from '../components/Skills.astro';
 		<WorkExperience />
 		<Skills />
 		<Education />
+		<Projects />
 	</main>
 </Layout>
 
